# eldar_aisd_labs

./: .gitignore  README.md
docs/: ïáí«αáΓ«α¡á∩ αáí«Γá(îÅ)ⁿ6.docx  Лабораторная работа(МП) №2.docx  Лабораторная работа(МП)№1.docx  Лабораторная работа(МП)№3.docx  Лабораторная работа(МП)№4(1).docx  Лабораторная работа(МП)№5(1).docx
lab1/: main.cpp
lab2/: main.cpp
lab3/: main.cpp
lab4/: main.cpp
lab5/: main.cpp
lab6/: CMakeLists.txt  main.cpp  run.txt
lab6/lab6/: CMakeLists.txt  input_tree.txt  main.cpp
